# numerical_format

./: .gitignore  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
inc/: config.h.in  error_helper_def.hpp  file_line_exception.hpp  macro_definitions.hpp  pdg_error.hpp  stream_output_proxy.hpp  symmetric_error.hpp  twodigits_error.cpp  type.hpp
python/: simple_python.py  uncertainties_testing.py
src/: CMakeLists.txt  error_helper_def.cpp  pdg_error.cpp  stream_output_proxy.cpp  symmetric_error.cpp  twodigits_error.cpp  type.cpp
tests/: CMakeLists.txt  all_tests.cpp  macro_checks.cpp  multiple_errors_checks.cpp  stream_output_checks.cpp  symmetric_error_checks.cpp  template_checks.cpp  to_exponent_checks.cpp  to_fixed_string_checks.cpp  truncate_and_round_checks.cpp
